# FerretOS

./: .gitignore  Cargo.toml  README.md  build.ps1  win_build_bios_bootloader.ps1  win_run_qemu.ps1
.cargo/: config
src/: gdt.rs  interrupts.rs  io_ports.rs  keyboard.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/bios_bootloader/: boot1.asm
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
