[package]
name = "ferret_os"
version = "0.1.0"
authors = ["Gianmarco Donnici <gianmarco.donnici@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.8.2"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.7.5"
uart_16550 = "0.2.1"
pic8259_simple = "0.1.1"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
  "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false